--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ github_username:  nicolascau
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-leap-day
+theme: jekyll-theme-cayman
 plugins:
   - jekyll-feed
 
