--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,8 @@ github_username:  nicolascau
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: jekyll-theme-architect
+
 plugins:
   - jekyll-feed
 
